--- a/frontend/src/components/layout/Footer.module.css
+++ b/frontend/src/components/layout/Footer.module.css
@@ -1,9 +1,12 @@
 .footer{
-    height: 250px;
+    height: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #EEE;
     color: #444;
     border-top: 2px solid #666;
+    position: fixed; 
+    bottom: 0; 
+    width: 100%;
 }
