--- a/frontend/src/components/layout/Container.module.css
+++ b/frontend/src/components/layout/Container.module.css
@@ -1,6 +1,7 @@
 .container{
-    min-height: 70vh;
+    min-height: 80vh;
     padding: 1em 2em 3em;
     max-width: 1200px;
     margin: 0 auto;
+    margin-bottom: 100px;
 }
